--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="design/main.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Outfit">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" alt="">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>NFT_Freestyle</title>
 
